# cookiecutter-python-api

./: README.md  cookiecutter.json
{{cookiecutter.app_package}}/: .env  .env.dev  .env.devlocal  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
{{cookiecutter.app_package}}/migration/: env.py  script.py.mako
{{cookiecutter.app_package}}/migration/versions/: 05fee952f6fd_base.py
{{cookiecutter.app_package}}/{{cookiecutter.app_package}}/: config.py  conftest.py  main.py
{{cookiecutter.app_package}}/{{cookiecutter.app_package}}/domain/: foo.py
{{cookiecutter.app_package}}/{{cookiecutter.app_package}}/lib/: db.py  json_encoder.py  log.py  script.py  sentry.py  sqlalchemy_columns.py  task.py  uuid.py  uuid_test.py
{{cookiecutter.app_package}}/{{cookiecutter.app_package}}/repo/: base.py  base_test.py  conftest.py  foo.py
{{cookiecutter.app_package}}/{{cookiecutter.app_package}}/route/: health.py  health_test.py
{{cookiecutter.app_package}}/{{cookiecutter.app_package}}/task/: health.py
