[tool.poetry]
name = "{{cookiecutter.app_package}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["Your Name <you@example.com>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.23"}
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
structlog = "^21.1.0"

[tool.poetry.dev-dependencies]
uvicorn = {extras = ["standard"], version = "^0.15.0"}
mypy = "^0.910"
flake8 = "^3.9.2"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
pytest = "^6.2.5"
requests = "^2.26.0"  # necessary for TestClient
types-requests = "^2.25.6"
ipdb = "^0.13.9"
pytest-mock = "^3.6.1"
pytest-cov = "^2.10"
colorama = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "nocov",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.isort]
# Make isort compatible with black, see docs
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
